[tool.poetry]
name = "sentryfilelogswatchdog"
version = "0.1.0"
description = ""
authors = ["scripthound <grinkiko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sentry-sdk = "^1.43.0"
watchdog = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
